--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
     <!-- password dialog -->
     <div class="passwordDialog">
         <div class="userProfile"><img src="src/icons/user.svg" alt="User Profile"></div>
-        <div class="username">User Name</div>
+        <div class="username">Awab Moustafa</div>
         <div class="sign-in-content">
             <div class="sign-in-method active" id="method_1" data-tab-info>
                 <input type="password" placeholder="PIN" id="passwordField">
-                <span class="hint">Your password is: 12345</span>
+               
                 <div class="forgotOption">I forgot my pin</div>
             </div>
             <div class="sign-in-method" id="method_2" data-tab-info>
@@ -285,7 +285,7 @@
         <div class="others">
             <div class="user">
                 <img src="src/icons/user.png" alt="Windows 11 User icon">
-                <span>Rajaniraiyn</span>
+                <span>Awab Moustafa</span>
             </div>
             <a href="src/redirects/shutdown/logoff.html"><img src="src/icons/shutdown.svg" alt="Windows 11 Shutdown icon" id="shutdown"></a>
         </div>
